src/components/Projects/Projects.css
.section-container:nth-of-type(4) .section {
  padding-bottom: 0;
}

.section-container:nth-of-type(5) .section {
  padding-top: 0;
}

.project {
  display: grid;
  grid-template-columns: 1.4fr 0.3fr 1fr;
  transition: 500ms linear;
  transition-property: filter, opacity, transform;
}

.project.delay {
  transition-delay: 850ms;
}

.project.hidden {
  transform: translateX(4rem);
}

:is(.project-img, .project-content) {
  grid-row: 1;
}

.project-img {
  grid-column: 1 / 3;
  width: 100%;
  border-radius: 5px;
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
}

.project-content {
  grid-column: 2 / -1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1.4rem;
  transition: 300ms background-color ease-in-out;
}

:is(.project-name, .project-desc) {
  text-align: right;
}

.project-desc {
  background-color: var(--alt-bg);
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
  padding: 1rem;
  font-size: var(--font-size);
  border-radius: 5px;
  margin: unset;
  transition: 300ms background-color ease-in-out;
}

.project-links,
.project-tech-container {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  gap: 0.7rem;
}

.section-container:nth-of-type(6) .project {
  grid-template-columns: 1fr 0.3fr 1.4fr;
}
.section-container:nth-of-type(6) .project.hidden {
  transform: translateX(-4rem);
}
.section-container:nth-of-type(6) .project-img {
  grid-column: 2 / -1;
}
.section-container:nth-of-type(6) .project-content {
  grid-column: 1 / 3;
}
.section-container:nth-of-type(6) :is(.project-name, .project-desc) {
  text-align: left;
}
.section-container:nth-of-type(6) :is(.project-links, .project-tech-container) {
  justify-content: flex-start;
}

@media (max-width: 870px) {
  .project {
    display: flex;
    flex-direction: column;
  }
  .project-content {
    padding: 1.5rem;
    background-color: var(--alt-bg);
    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
    border-top: 2px solid var(--accent-clr);
    border-radius: 0 0 5px 5px;
  }
  .project-img {
    border-radius: 5px 5px 0 0;
  }
  :is(.project-name, .project-desc) {
    text-align: left;
  }
  .project-desc {
    padding: 0;
    box-shadow: initial;
  }
  :is(.project-links, .project-tech-container) {
    justify-content: initial;
  }
}

@media (max-width: 520px) {
  .project-content {
    padding: 1rem;
  }
}

